--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <p>cool webcomics for you whenever i feel like updating.  </p>
 
 <p>my main first adventure johnpurple.net is a fun and exciting story about spacemen and soda.</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ABK2ioLjezg" frameborder="0" allowfullscreen></iframe>
       </section>
     </div>
 
