Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 <p>cool webcomics for you whenever i feel like updating.  </p>
 
 <p>my main first adventure johnpurple.net is a fun and exciting story about spacemen and soda.</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ABK2ioLjezg" frameborder="0" allowfullscreen></iframe>
+
+<p><img src="http://vignette3.wikia.nocookie.net/mspaintadventures/images/1/1c/Davetux.png/revision/latest?cb=20100824192040" alt="picture i guess">.</p>
       </section>
     </div>
 
