--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <p>cool webcomics for you whenever i feel like updating.  </p>
 
 <p>my main first adventure johnpurple.net is a fun and exciting story about spacemen and soda.</p>
+<iframe style="border: 0; width: 350px; height: 470px;" src="https://bandcamp.com/EmbeddedPlayer/album=1612699229/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/" seamless><a href="http://homestuck.bandcamp.com/album/homestuck-vol-8">Homestuck Vol. 8 by Homestuck</a></iframe>
 
 <p><img src="http://vignette3.wikia.nocookie.net/mspaintadventures/images/1/1c/Davetux.png/revision/latest?cb=20100824192040" alt="picture i guess">.</p>
       </section>
